Add personal-info-card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="w-screen h-full min-h-screen bg-gradient-to-b from-[#434B4D] to-[#000000]">
+  <div>
+    <personal-info-card>
+
+    </personal-info-card>
+  </div>
+</div>
