--- a/src/components/personal-info-card/personal-info-card.component.html
+++ b/src/components/personal-info-card/personal-info-card.component.html
@@ -1,78 +1,81 @@
-<div class="sidebar">
-     <div class="flex flex-col items-center gap-4">
-          <div class="h-[150px] w-[150px] rounded-[30px] bg-gradient-to-br from-[#3f3f40] to-[#303030]">
+<aside class="sidebar" data-sidebar>
+     <div class="sidebar-info">
+          <figure class="avatar-box">
+               <img src="../../assets/images/my-avatar.png" alt="Nicolas Ibañez Pic" width="80">
+          </figure>
+          <div class="info-content">
+               <h1 class="name" title="Om Kharche">Nicolas Ibañez</h1>
+               <p class="title">Junior Full Stack Developer</p>
           </div>
-          <div class="flex flex-col items-center gap-2">
-               <h1 class="text-white text-2xl mb-4">Nicolas Ibañez</h1>
-               <p class="text-white text-xs mb-4 bg-[#2B2B2C] p-2 rounded-[8px]">Junior Full Stack Developer</p>
-          </div>
+          <button class="info_more-btn" data-sidebar-btn>
+               <span>Show Contacts</span>
+               <a name="chevron-down"></a>
+          </button>
      </div>
-     <div class="bg-neutral-700 h-[0.5px] w-[100%]"></div>
-     <div class="flex flex-col justify-normal gap-8">
-          <div class="flex flex-row gap-2">
-               <div
-                    class="h-[50px] w-[50px] rounded-[12px] bg-gradient-to-br from-[#404040] to-[#40404000] grid place-content-center">
-                    <a class="w-[25px] h-[25px]">
-                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+     <div class="sidebar-info_more">
+          <div class="separator"></div>
+          <ul class="contacts-list">
+               <li class="contact-item">
+                    <div class="icon-box">
+                         <a class="w-[25px] h-[25px]">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                   <path fill="#dedede"
+                                        d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                              </svg>
+                         </a>
+                    </div>
+                    <div class="contact-info">
+                         <p class="contact-title">Email</p>
+                         <a href="mailto:nibanezpaez@gmail.com" class="contact-link">{{"nibanezpaez@gmail.com"}}</a>
+                    </div>
+               </li>
+               <li class="contact-item">
+                    <div class="icon-box">
+                         <a class="w-[25px] h-[25px]">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                   <path fill="#dedede"
+                                        d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
+                              </svg>
+                         </a>
+                    </div>
+                    <div class="contact-info">
+                         <p class="contact-title">Phone</p>
+                         <a href="tel:+573003323849" class="contact-link">+57 (300) 332-3849</a>
+                    </div>
+               </li>
+               <li class="contact-item">
+                    <div class="icon-box">
+                         <a class="w-[25px] h-[25px]">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                                   <path fill="#dedede"
+                                        d="M408 120c0 54.6-73.1 151.9-105.2 192c-7.7 9.6-22 9.6-29.6 0C241.1 271.9 168 174.6 168 120C168 53.7 221.7 0 288 0s120 53.7 120 120zm8 80.4c3.5-6.9 6.7-13.8 9.6-20.6c.5-1.2 1-2.5 1.5-3.7l116-46.4C558.9 123.4 576 135 576 152l0 270.8c0 9.8-6 18.6-15.1 22.3L416 503l0-302.6zM137.6 138.3c2.4 14.1 7.2 28.3 12.8 41.5c2.9 6.8 6.1 13.7 9.6 20.6l0 251.4L32.9 502.7C17.1 509 0 497.4 0 480.4L0 209.6c0-9.8 6-18.6 15.1-22.3l122.6-49zM327.8 332c13.9-17.4 35.7-45.7 56.2-77l0 249.3L192 449.4 192 255c20.5 31.3 42.3 59.6 56.2 77c20.5 25.6 59.1 25.6 79.6 0zM288 152a40 40 0 1 0 0-80 40 40 0 1 0 0 80z" />
+                              </svg>
+                         </a>
+                    </div>
+                    <div class="contact-info">
+                         <p class="contact-title">Location</p>
+                         <address> Bogotá, Colombia </address>
+                    </div>
+               </li>
+          </ul>
+          <div class="separator"></div>
+          <ul class="social-list">
+               <li class="social-item">
+                    <a class="w-[20px] h-[20px]" href="https://www.linkedin.com/in/theycallmenick21" target="_blank">
+                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                               <path fill="#dedede"
-                                   d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                                   d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
                          </svg>
                     </a>
-               </div>
-               <div class="flex flex-col place-content-around">
-                    <p class="text-xs text-[#d6d6d6b3]">EMAIL</p>
-                    <a class="text-ms text-[#fafafa] truncate max-w-[180px]" href="mailto:nibanezpaez@gmail.com">
-                         {{'nibanezpaez@gmail.com'}}
-                    </a>
-               </div>
-          </div>
-          <div class="flex flex-row gap-2">
-               <div
-                    class="h-[50px] w-[50px] rounded-[12px] bg-gradient-to-br from-[#404040] to-[#40404000] grid place-content-center">
-                    <a class="w-[25px] h-[25px]">
-                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+               </li>
+               <li class="social-item">
+                    <a class="w-[20px] h-[20px]" href="https://github.com/theycallmenick21" target="_blank">
+                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                               <path fill="#dedede"
-                                   d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z" />
+                                   d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z" />
                          </svg>
                     </a>
-               </div>
-               <div class="flex flex-col place-content-around">
-                    <p class="text-xs text-[#d6d6d6b3]">PHONE</p>
-                    <a class="text-ms text-[#fafafa]" href="tel:+573003323849">
-                         +57 (300) 332-3849
-                    </a>
-               </div>
-          </div>
-          <div class="flex flex-row gap-2">
-               <div
-                    class="h-[50px] w-[50px] rounded-[12px] bg-gradient-to-br from-[#404040] to-[#40404000] grid place-content-center">
-                    <a class="w-[25px] h-[25px]">
-                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-                              <path fill="#dedede"
-                                   d="M408 120c0 54.6-73.1 151.9-105.2 192c-7.7 9.6-22 9.6-29.6 0C241.1 271.9 168 174.6 168 120C168 53.7 221.7 0 288 0s120 53.7 120 120zm8 80.4c3.5-6.9 6.7-13.8 9.6-20.6c.5-1.2 1-2.5 1.5-3.7l116-46.4C558.9 123.4 576 135 576 152l0 270.8c0 9.8-6 18.6-15.1 22.3L416 503l0-302.6zM137.6 138.3c2.4 14.1 7.2 28.3 12.8 41.5c2.9 6.8 6.1 13.7 9.6 20.6l0 251.4L32.9 502.7C17.1 509 0 497.4 0 480.4L0 209.6c0-9.8 6-18.6 15.1-22.3l122.6-49zM327.8 332c13.9-17.4 35.7-45.7 56.2-77l0 249.3L192 449.4 192 255c20.5 31.3 42.3 59.6 56.2 77c20.5 25.6 59.1 25.6 79.6 0zM288 152a40 40 0 1 0 0-80 40 40 0 1 0 0 80z" />
-                         </svg>
-                    </a>
-               </div>
-               <div class="flex flex-col place-content-around">
-                    <p class="text-xs text-[#d6d6d6b3]">LOCATION</p>
-                    <address class="text-ms text-[#fafafa]">
-                         Bogotá, Colombia
-                    </address>
-               </div>
-          </div>
+               </li>
+          </ul>
      </div>
-     <div class="grid gap-4 grid-cols-2">
-          <a class="w-[20px] h-[20px]" href="https://www.linkedin.com/in/theycallmenick21" target="_blank">
-               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                    <path fill="#dedede"
-                         d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
-               </svg>
-          </a>
-          <a class="w-[20px] h-[20px]" href="https://github.com/theycallmenick21" target="_blank">
-               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                    <path fill="#dedede"
-                         d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z" />
-               </svg>
-          </a>
-     </div>
-</div>
+</aside>
