--- a/src/components/personal-info-card/personal-info-card.component.html
+++ b/src/components/personal-info-card/personal-info-card.component.html
@@ -1,7 +1,8 @@
 <aside class="sidebar" data-sidebar>
      <div class="sidebar-info">
           <figure class="avatar-box">
-               <img src="../../assets/images/my-avatar.png" alt="Nicolas Ibañez Pic" width="80">
+               <img class="rounded-[10px] m-[25px]" src="https://i.ibb.co/4dLs1vq/IMG-4302-Photoroom.jpg"
+                    alt="Nicolas Ibañez Pic">
           </figure>
           <div class="info-content">
                <h1 class="name" title="Om Kharche">Nicolas Ibañez</h1>
@@ -9,7 +10,12 @@
           </div>
           <button class="info_more-btn" data-sidebar-btn>
                <span>Show Contacts</span>
-               <a name="chevron-down"></a>
+               <a class="w-[15px] h-[15px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                         <path fill="#FFD43B"
+                              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+                    </svg>
+               </a>
           </button>
      </div>
      <div class="sidebar-info_more">
