--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,6 @@
         <li class="navbar-item">
           <button class="navbar-link" data-nav-link>Portfolio</button>
         </li>
-        <li class="navbar-item">
-          <button class="navbar-link" data-nav-link>Contact</button>
-        </li>
       </ul>
     </nav>
     <article class="about  active" data-page="about">
@@ -24,16 +21,14 @@
       </header>
       <section class="about-text">
         <p>
-          I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-          I enjoy
-          turning complex problems into simple, beautiful and intuitive designs.
+          I am passionate about software development, with a constant drive to learn and improve in this exciting field.
+          I enjoy designing and building efficient and visually appealing applications using technologies such as
+          JavaScript, TypeScript, Angular, .NET, Tailwind, and SQL.
         </p>
         <p>
-          My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-          Moreover, I
-          add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-          across your
-          message and identity in the most creative way. I created web design for many famous brand companies.
+          I am motivated by the opportunity to solve complex problems, collaborate with teams, and create solutions that
+          make a difference. My focus is on continuous growth and seizing every opportunity to contribute to innovative
+          and challenging projects.
         </p>
       </section>
       <section class="service">
@@ -41,53 +36,51 @@
         <ul class="service-list">
           <li class="service-item">
             <div class="service-icon-box">
-              <img src="../assets/images/icon-design.svg
-                " alt="design icon" width="40">
+              <img src="https://i.ibb.co/6yrKdZq/output-onlinepngtools.png" alt="design icon" width="40">
             </div>
             <div class="service-content-box">
-              <h4 class="h4 service-item-title">Web design</h4>
+              <h4 class="h4 service-item-title">Front-End Development</h4>
               <p class="service-item-text">
-                The most modern and high-quality design made at a professional level.
+                Crafting responsive, modern, and user-friendly interfaces with top-notch quality.
               </p>
             </div>
           </li>
           <li class="service-item">
             <div class="service-icon-box">
-              <img src="../assets/images/icon-dev.svg" alt="Web development icon" width="40">
+              <img src="https://i.ibb.co/YbdkPjV/back-end.png" alt="Web development icon" width="40">
             </div>
             <div class="service-content-box">
-              <h4 class="h4 service-item-title">Web development</h4>
+              <h4 class="h4 service-item-title">Back-End Development</h4>
               <p class="service-item-text">
-                High-quality development of sites at the professional level.
+                Building robust and scalable server-side solutions for seamless application performance.
               </p>
             </div>
           </li>
           <li class="service-item">
             <div class="service-icon-box">
-              <img src="../assets/images/icon-app.svg" alt="mobile app icon" width="40">
+              <img src="https://i.ibb.co/tKrPpy6/desarrollador-full-stack.png" alt="mobile app icon" width="40">
             </div>
             <div class="service-content-box">
-              <h4 class="h4 service-item-title">Mobile apps</h4>
-
+              <h4 class="h4 service-item-title">Full-Stack Development</h4>
               <p class="service-item-text">
-                Professional development of applications for iOS and Android.
+                Delivering end-to-end solutions by integrating high-quality front-end and back-end technologies.
               </p>
             </div>
           </li>
           <li class="service-item">
             <div class="service-icon-box">
-              <img src="../assets/images/icon-photo.svg" alt="camera icon" width="40">
+              <img src="https://i.ibb.co/BBRB9wk/ui.png" alt="camera icon" width="40">
             </div>
             <div class="service-content-box">
-              <h4 class="h4 service-item-title">Photography</h4>
+              <h4 class="h4 service-item-title">UI/UX Design</h4>
               <p class="service-item-text">
-                I make high-quality photos of any category at a professional level.
+                Creating intuitive, visually appealing, and user-focused designs for optimal experiences.
               </p>
             </div>
           </li>
         </ul>
       </section>
-      <section class="testimonials">
+      <section class="testimonials" *ngIf="false">
         <h3 class="h3 testimonials-title">Testimonials</h3>
         <ul class="testimonials-list has-scrollbar">
           <li class="testimonials-item">
@@ -187,7 +180,7 @@
           </div>
         </section>
       </div>
-      <section class="clients">
+      <section class="clients" *ngIf="false">
         <h3 class="h3 clients-title">Clients</h3>
         <ul class="clients-list has-scrollbar">
           <li class="clients-item">
@@ -230,40 +223,24 @@
       <section class="timeline">
         <div class="title-wrapper">
           <div class="icon-box">
-            <a name="book-outline"></a>
+            <img src="https://i.ibb.co/k8j0F1x/educacion.png" alt="camera icon" width="40">
           </div>
           <h3 class="h3">Education</h3>
         </div>
         <ol class="timeline-list">
           <li class="timeline-item">
-            <h4 class="h4 timeline-item-title">University Of Engineering Pune </h4>
-            <span>2021 — 2024</span>
-            <p class="timeline-text">
-              Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-              quas molestias
-              exceptur.
-            </p>
+            <h4 class="h4 timeline-item-title">University Politecnico Grancolombiano</h4>
+            <span>now</span>
           </li>
           <li class="timeline-item">
-            <h4 class="h4 timeline-item-title">New york academy of Texas</h4>
-            <span>2018 — 2024</span>
+            <h4 class="h4 timeline-item-title">University Politecnico Grancolombiano</h4>
+            <span>2020</span>
             <p class="timeline-text">
-              Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-              omnis..
-            </p>
-          </li>
-          <li class="timeline-item">
-            <h4 class="h4 timeline-item-title">High school of art and design</h4>
-            <span>2017 — 2018</span>
-            <p class="timeline-text">
-              Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-              magni dolores
-              eos.
-            </p>
+              Software Engineering
           </li>
         </ol>
       </section>
-      <section class="timeline">
+      <section class="timeline" *ngIf="false">
         <div class="title-wrapper">
           <div class="icon-box">
             <a name="book-outline"></a>
@@ -305,25 +282,7 @@
         <ul class="skills-list content-card">
           <li class="skills-item">
             <div class="title-wrapper">
-              <h5 class="h5">Web design</h5>
-              <data value="80">80%</data>
-            </div>
-            <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 80%;"></div>
-            </div>
-          </li>
-          <li class="skills-item">
-            <div class="title-wrapper">
-              <h5 class="h5">Graphic design</h5>
-              <data value="70">70%</data>
-            </div>
-            <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 70%;"></div>
-            </div>
-          </li>
-          <li class="skills-item">
-            <div class="title-wrapper">
-              <h5 class="h5">Branding</h5>
+              <h5 class="h5">Cominication</h5>
               <data value="90">90%</data>
             </div>
             <div class="skill-progress-bg">
@@ -332,11 +291,29 @@
           </li>
           <li class="skills-item">
             <div class="title-wrapper">
-              <h5 class="h5">WordPress</h5>
-              <data value="50">50%</data>
+              <h5 class="h5">Responsive Design Expertise</h5>
+              <data value="85">85%</data>
             </div>
             <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 50%;"></div>
+              <div class="skill-progress-fill" style="width: 85%;"></div>
+            </div>
+          </li>
+          <li class="skills-item">
+            <div class="title-wrapper">
+              <h5 class="h5">Efficient Code Writing</h5>
+              <data value="90">90%</data>
+            </div>
+            <div class="skill-progress-bg">
+              <div class="skill-progress-fill" style="width: 90%;"></div>
+            </div>
+          </li>
+          <li class="skills-item">
+            <div class="title-wrapper">
+              <h5 class="h5">Problem-Solving</h5>
+              <data value="80">80%</data>
+            </div>
+            <div class="skill-progress-bg">
+              <div class="skill-progress-fill" style="width: 80%;"></div>
             </div>
           </li>
         </ul>
@@ -347,7 +324,7 @@
         <h2 class="h2 article-title">Portfolio</h2>
       </header>
       <section class="projects">
-        <ul class="filter-list">
+        <ul class="filter-list" *ngIf="false">
           <li class="filter-item">
             <button class="active" data-filter-btn>All</button>
           </li>
@@ -361,26 +338,11 @@
             <button data-filter-btn>Web development</button>
           </li>
         </ul>
-        <div class="filter-select-box">
+        <div class="filter-select-box hidden">
           <button class="filter-select" data-select>
             <div class="select-value" data-selecct-value>Select category</div>
-            <div class="select-icon">
-              <a name="chevron-down"></a>
-            </div>
           </button>
           <ul class="select-list">
-            <li class="select-item">
-              <button data-select-item>All</button>
-            </li>
-            <li class="select-item">
-              <button data-select-item>Web design</button>
-            </li>
-            <li class="select-item">
-              <button data-select-item>Applications</button>
-            </li>
-            <li class="select-item">
-              <button data-select-item>Web development</button>
-            </li>
           </ul>
         </div>
         <ul class="project-list">
@@ -396,106 +358,10 @@
               <p class="project-category">Web development</p>
             </a>
           </li>
-          <li class="project-item  active" data-filter-item data-category="web development">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-2.png" alt="orizon" loading="lazy">
-              </figure>
-              <h3 class="project-title">Orizon</h3>
-              <p class="project-category">Web development</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="web design">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-3.jpg" alt="fundo" loading="lazy">
-              </figure>
-              <h3 class="project-title">Fundo</h3>
-              <p class="project-category">Web design</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="applications">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-              </figure>
-              <h3 class="project-title">Brawlhalla</h3>
-              <p class="project-category">Applications</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="web design">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-5.png" alt="dsm." loading="lazy">
-              </figure>
-              <h3 class="project-title">DSM.</h3>
-              <p class="project-category">Web design</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="web design">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-6.png" alt="metaspark" loading="lazy">
-              </figure>
-              <h3 class="project-title">MetaSpark</h3>
-              <p class="project-category">Web design</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="web development">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-7.png" alt="summary" loading="lazy">
-              </figure>
-              <h3 class="project-title">Summary</h3>
-              <p class="project-category">Web development</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="applications">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-8.jpg" alt="task manager" loading="lazy">
-              </figure>
-              <h3 class="project-title">Task Manager</h3>
-              <p class="project-category">Applications</p>
-            </a>
-          </li>
-          <li class="project-item  active" data-filter-item data-category="web development">
-            <a href="#">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <a name="eye-outline"></a>
-                </div>
-                <img src="../assets/images/project-9.png" alt="arrival" loading="lazy">
-              </figure>
-              <h3 class="project-title">Arrival</h3>
-              <p class="project-category">Web development</p>
-            </a>
-          </li>
         </ul>
       </section>
     </article>
-    <article class="contact" data-page="contact">
+    <article class="contact" data-page="contact" *ngIf="">
       <header>
         <h2 class="h2 article-title">Contact</h2>
       </header>
