--- a/src/components/personal-info-card/personal-info-card.component.html
+++ b/src/components/personal-info-card/personal-info-card.component.html
@@ -1,7 +1,7 @@
 <aside class="sidebar" data-sidebar>
      <div class="sidebar-info">
           <figure class="avatar-box">
-               <img class="rounded-[10px] m-[25px]" src="https://i.ibb.co/4dLs1vq/IMG-4302-Photoroom.jpg"
+               <img class="rounded-[10px] m-[25px] profile-pic" src="https://i.ibb.co/Th4PzZk/file.jpg"
                     alt="Nicolas Ibañez Pic">
           </figure>
           <div class="info-content">
