--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <li class="navbar-item">
           <button class="navbar-link" data-nav-link>Resume</button>
         </li>
-        <li class="navbar-item">
+        <li class="navbar-item" *ngIf="false">
           <button class="navbar-link" data-nav-link>Portfolio</button>
         </li>
       </ul>
